--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "angular-fusioncharts": "^4.0.3",
+    "fusioncharts": "^3.21.1",
     "ngx-cookie-service": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
